--- a/i18n/messages.json
+++ b/i18n/messages.json
@@ -345,8 +345,10 @@
   "documentPage.process.title": "Process",
   "documentPage.route.noTasks": "No Tasks.",
   "documentPage.route.view.graph": "View Graph",
+  "documentPage.info": "Info",
   "documentPage.initiated.workflow.currentUser": "You started a {0} workflow on this document.",
   "documentPage.initiated.workflow": " started a {0} workflow on this document.",
+  "documentPage.metadata": "Metadata",
   "documentPage.tags": "Tags",
   "documentPage.tags.placeholder": "Add tags to this document",
   "documentPage.to.process": "You have a task to process before ",
@@ -432,6 +434,7 @@
   "favorites.empty": "You haven't starred documents yet.",
   "file.content": "Content",
   "fileViewLayout.upload": "Upload main file",
+  "folderishPage.details.label" : "details",
   "home.dashboard": "Dashboard",
   "home.favorites": "Favorite Items",
   "home.latestDocumentsEdited": "Recently Edited",
